--- a/css/style.css
+++ b/css/style.css
@@ -748,13 +748,15 @@
 .contenedor__carrito{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .subcontenedor__carrito{
     width: 1100px;
     height: 280px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     background-color: #2c3030;
     border-radius: 25px;
     border: 1px #FFC800 solid;
