--- a/css/style.css
+++ b/css/style.css
@@ -747,6 +747,10 @@
 .carrito__vacio{
     display: flex;
     justify-content: center;
+    padding-left: 15px;
+    padding-right: 15px;
+
+    text-align: center;
 }
 
 .carrito__compras__parrafo__vacio{
@@ -779,7 +783,7 @@
 
 .subcontenedor__carrito{
     width: 1100px;
-    height: 280px;
+    height: 245px;
     margin-top: 30px;
     margin-bottom: 30px;
     background-color: #2c3030;
@@ -1324,6 +1328,15 @@
 
 }
 
+@media (max-width:1125px){
+
+    /*Seccion carrito👇*/
+
+    .subcontenedor__carrito {
+        width: 900px;
+    }
+}
+
 @media (max-width:1024px){
 
     /*Inicio👇*/
@@ -1361,6 +1374,14 @@
     .header__media__quaries__section{
         min-height: 100vh;
         background-color: #1b1d1d;
+    }
+
+    /*Seccion carrito👇*/
+
+    .subcontenedor__carrito {
+        height: 400px;
+        width: 500px;
+        flex-direction: column;
     }
 }
 
@@ -1602,6 +1623,16 @@
         min-height: 48.5vh;
     }
 
+    /*Seccion carrito👇*/
+
+    .subcontenedor__carrito {
+        width: 400px;
+    }
+
+    .subcontenedor__carrito__elementos {
+        width: 380px;
+    }
+
 }
 
 @media (max-width:455px){
@@ -1785,6 +1816,27 @@
         min-height: 350px;
         width: 260px;
     }
+
+    /*Seccion carrito👇*/
+
+    .subcontenedor__carrito {
+        width: 370px;
+    }
+
+    .subcontenedor__carrito__elementos {
+        width: 340px;
+        flex-direction: column;
+    }
+
+    .borrar__carrito {
+        border-radius: 10px 10px 0px 0px;
+        padding: 10px 10px 10px 10px;
+    }
+
+    .comprar__carrito {
+        border-radius: 0px 0px 10px 10px;
+        padding: 10px 10px 10px 10px;
+    }
 }
 
 @media (max-width:375px){
@@ -1835,6 +1887,12 @@
 
     .form__contacto {
         width: 280px;
+    }
+
+    /*Seccion carrito👇*/
+
+    .subcontenedor__carrito {
+        width: 350px;
     }
 
 }
@@ -1969,6 +2027,17 @@
 .div__secundario__notebook__hero {
     min-height: 350px;
     width: 240px;
+}
+
+/*Seccion carrito👇*/
+
+.subcontenedor__carrito {
+    width: 300px;
+}
+
+.subcontenedor__carrito__elementos {
+    width: 280px;
+    flex-direction: column;
 }
 }
 
